# ChangeLog for app-arch/dpkg
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.161 2011/04/16 16:01:08 jer Exp $

*dpkg-1.16.0.2 (16 Apr 2011)

  16 Apr 2011; Jeroen Roovers <jer@gentoo.org> +dpkg-1.16.0.2.ebuild:
  Version bump.

*dpkg-1.16.0.1 (05 Apr 2011)

  05 Apr 2011; Jeroen Roovers <jer@gentoo.org> +dpkg-1.16.0.1.ebuild:
  Version bump.

  02 Apr 2011; Raúl Porcel <armin76@gentoo.org> dpkg-1.15.8.10.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #359115

*dpkg-1.16.0 (02 Apr 2011)

  02 Apr 2011; Yuri Vasilevski <yvasilev@gentoo.org> +dpkg-1.16.0.ebuild:
  Version bump.

  28 Mar 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  dpkg-1.15.8.10.ebuild:
  x86 stable wrt bug #359115

  27 Mar 2011; Tobias Klausmann <klausman@gentoo.org> dpkg-1.15.8.10.ebuild:
  Stable on alpha, bug #359115

  21 Mar 2011; Markos Chandras <hwoarang@gentoo.org> dpkg-1.15.8.10.ebuild:
  Stable on amd64 wrt bug #359115

  20 Mar 2011; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.8.10.ebuild:
  Stable for HPPA (bug #359115).

  20 Mar 2011; Brent Baude <ranger@gentoo.org> dpkg-1.15.8.10.ebuild:
  Marking dpkg-1.15.8.10 ppc for bug 359115

*dpkg-1.15.8.10 (31 Jan 2011)

  31 Jan 2011; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.8.10.ebuild:
  Version bump.

*dpkg-1.15.8.9 (29 Jan 2011)

  29 Jan 2011; Jeroen Roovers <jer@gentoo.org> +dpkg-1.15.8.9.ebuild:
  Version bump.

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org>
  files/dpkg-1.15.5.6-bootstrap.patch:
  Clean up patch.

  08 Jan 2011; Jeroen Roovers <jer@gentoo.org> dpkg-1.15.8.8.ebuild:
  Stable for HPPA (bug #350877).

  08 Jan 2011; Raúl Porcel <armin76@gentoo.org> dpkg-1.15.8.8.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #350877

  08 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> dpkg-1.15.8.8.ebuild:
  ppc/ppc64 stable wrt #350877

  07 Jan 2011; Christian Faulhammer <fauli@gentoo.org> dpkg-1.15.8.8.ebuild: