@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX dpkg-1.15.5.6-bootstrap.patch 853 RMD160 b6e73361f662971730b2078afbe9ca2b679680a1 SHA1 4266da38c786a3a7d5111a35bb2fb5f0c8656cf6 SHA256 05ed4c2b265556767820fdf31ea9bf0da09eaafae1e39b75d634be385f05ab13
 DIST dpkg_1.15.8.10.tar.bz2 5250085 RMD160 a22c062a0935b9e80b2c098e4a389ceef6fdfab0 SHA1 fcfb6821a4f5d7134a29023637c798ba79e41338 SHA256 e592a62acc11a497c85a52bc191cdcaf416441ce00c47b0b7b4c3d6d434b4757
 DIST dpkg_1.15.8.8.tar.bz2 5266200 RMD160 c22d064c86f472377d78402bbc472989cda5e5c5 SHA1 eb15f16714dfab4bdacc092261088f9fc13cc6d7 SHA256 cc9f699abf95848c4e5e3c236e7bef5af01afec63fd1fb9fc88a01af6a98f3c5
@@ -9,7 +12,14 @@ EBUILD dpkg-1.15.8.10.ebuild 2525 RMD160 293ff8070e6e737df0a07b8321cf2bef36fd637
 EBUILD dpkg-1.15.8.8.ebuild 2519 RMD160 8a2c0ced8a4a6ad023eafa5d152827813b0dc25a SHA1 68d7fb41784b6309a83fe179e14c90672cc0f7a5 SHA256 eca90b7c08f71aaf7036af43c84e640bca028ee989fafe8513ff9d05878d4476
 EBUILD dpkg-1.15.8.9.ebuild 2531 RMD160 6d9c7851390c8bff2023db8aaa63eeae1aa0561c SHA1 3ffeb852e9f51c424ca0e04ac15214fc7c2b984c SHA256 62c089ceefe200550fc7dc618de410081a0c9bd4d72f5b3e1605af70fe49c754
 EBUILD dpkg-1.16.0.1.ebuild 2523 RMD160 b890eb297ef2af9014968570f60b8cedbd051b0e SHA1 f6c729baffeb3b8ddf8f7ffeee43d04db3dfc46f SHA256 e25f845eb78a5a4a82d8cef00d4a7e4449ee12fc71bdb03be0b3f1c130e250e5
-EBUILD dpkg-1.16.0.2.ebuild 2523 RMD160 b325a9d73fd28d13b047ac77c83d2b2eeee9787a SHA1 5aad87cb6eb37044de22c60b96d3b8e70442b6fc SHA256 eac5feba7cbd9596f4fdd7317bcebf419592cf6d77ba3f9212a2d60b55d1d3cc
+EBUILD dpkg-1.16.0.2.ebuild 2633 RMD160 bb9a25d90c07dfc0929b83bdff811a6a81457aca SHA1 708ac3f4b3a53edcb20951b494eeab6bb82f9047 SHA256 570dcec18eb5d8dccf62e9ce6e53ba7b924784b40181910831565c4b6dbadc1f
 EBUILD dpkg-1.16.0.ebuild 2526 RMD160 cff5eb28fbeb0f3d99e4a5407d3e97ec013dbe2d SHA1 a77ba638aed5992c57dd79a2d7b4c4fca136d1ae SHA256 dc9643effaed14f4ff5caf619d35b28d68bc112c59c6e48a961b0398f929f0a7
-MISC ChangeLog 21719 RMD160 e808c11f653d7e42fb5bf9ed396447fbbe0f10b0 SHA1 fcee223af1a03517784a60a8e1a9d7e6ed6ced49 SHA256 a6017e1c57fe1feaafcf8d27e587281a68b60eade111beab25f66d47128ef7ea
+MISC ChangeLog 21809 RMD160 7cc4a23800deca734836be2797e58d671d5b5080 SHA1 6158b7460b5f1e8f14b6b4747909324706a7b293 SHA256 eb1aca2795c78f31c2d30eeedc9fd8a52a59134559e34c6132064b5a0ec24350
 MISC metadata.xml 249 RMD160 91de35e671db35d8e1c3fe50177b6ec889466712 SHA1 d6956b17015162642aa95088fc3abbaee87d69d3 SHA256 d6077d4b746902b16a584be1c22f32bd2f88f2f5eff566ba8fb7b0b78a6827b7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2pv2gACgkQVWmRsqeSphOBGACbB2yITkf9AyEiyL6nbfOMILtO
+DpMAn0KG7kBXffBwRJTQJxdceoQh9ZvZ
+=1130
+-----END PGP SIGNATURE-----
