@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/dpkg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.161 2011/04/16 16:01:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.162 2011/04/16 16:10:10 jer Exp $
+
+  16 Apr 2011; Jeroen Roovers <jer@gentoo.org> dpkg-1.16.0.2.ebuild:
+  Add more linguas.
 
 *dpkg-1.16.0.2 (16 Apr 2011)
 
